--- a/intro.html
+++ b/intro.html
@@ -10,7 +10,22 @@
 </head>
 <body>
 
-	<div class="container-fluid">
+	<nav class="navbar navbar-dark bg-dark">
+		<a class="navbar-brand" href="#">Curso Vue</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="navbarsExample01">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				</li>
+			<li class="nav-item">
+		</div>
+	</nav>
+
+	<div class="container">
 		
 		<div id="app">
 
